<resources>
    <string name="app_name">Cap-Cap</string>
    <string name="Entrar">Entrar</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Saltar">Saltar</string>
    <string name="Password">Contraseña</string>
    <string name="logo">logo</string>
    <string name="user">Usuario</string>
    <string name="email">correo electrónico</string>
    <string name="forgetPassword">¿Olvidaste tu contraseña?</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_prin">PrinActivity</string>
    <string name="title_activity_princ_activiry">PrincActiviry</string>
    <string name="invitado">Usurio invitado</string>
    <string name="registrate">Registrarme</string>
    <string name="home">Inicio</string>
    <string name="favorites">Favoritos</string>
    <string name="history">Historial</string>
    <string name="Nearme">Tiendas cerca</string>
    <string name="categories">Categorias</string>
    <string name="share">Compartir</string>
    <string name="invite">Invitar amigos</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="free">Free</string>
    <string name="search">search</string>
    <string name="title_activity_favorites">Favoritos</string>
    <string name="title_activity_history">Historial</string>
    <string name="title_activity_nearme">Tiendas cerca</string>
    <string name="title_activity_categories">Categorias</string>
    <string name="title_activity_setting">Configuraciones</string>
    <string name="list">list</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="settings">Configuraciones</string>

    <string name="title_activity_near">Tiendas cerca</string>
    <string name="title_activity_soap">SoapActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="huevo">huevo</string>
    <string name="google_maps_key">google_maps_key</string>
</resources>
