<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home_black_36dp"
            android:title="@string/home" />
        <item
            android:id="@+id/favorites"
            android:icon="@mipmap/ic_favorite_border_black_36dp"
            android:title="@string/favorites" />
        <item
            android:id="@+id/History"
            android:icon="@mipmap/ic_hourglass_empty_black_36dp"
            android:title="@string/history" />
        <item
            android:id="@+id/NearMe"
            android:icon="@mipmap/ic_room_black_36dp"
            android:title="@string/Nearme" />
        <item
            android:id="@+id/Categories"
            android:icon="@mipmap/ic_apps_black_36dp"
            android:title="@string/categories" />
    </group>

    <item>
        <menu>
            <item
                android:id="@+id/invite"
                android:icon="@mipmap/ic_drafts_black_36dp"
                android:title="@string/invite" />
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
        </menu>
    </item>

</menu>
